Closed Bug 1248726 Opened 8 years ago Closed 8 years ago

Further cleanups to PCLocationMap

Categories

(Core :: JavaScript: GC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

The memory management of this structure is quite weird, so add a comment and assertions detailing how it is all supposed to work.

https://treeherder.mozilla.org/#/jobs?repo=try&revision=852de5cfc93b
Attachment #8719927 - Flags: review?(nfitzgerald)
Comment on attachment 8719927 [details] [diff] [review]
simplify_pclocationmap_further-v0.diff

Review of attachment 8719927 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks!
Attachment #8719927 - Flags: review?(nfitzgerald) → review+
https://hg.mozilla.org/mozilla-central/rev/1ef77d653c4f
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: