Bug 1248726 - Simplify PCLocationMap even further; r=fitzgen